deployment-def.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels: 
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      name: flask-app
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: pipeline-demo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
