redis-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec: 
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
  selector:
    matchLabels:
      app: redis
