service-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-demo-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
