svc_manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
spec:
  selector:
    app: test-app    # This label must match your pod's label
  ports:
    - protocol: TCP
      port: 5000        # Service port
      targetPort: 5000  # Pod's container port
